# goblin-ext

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
examples/: install_name_tool.rs  patchelf.rs
src/: codesign.rs  elf_writer.rs  lib.rs  macho_writer.rs
tests/: elf_writer_comprehensive.rs  elf_writer_integration.rs
tests/assets/: build_assets.sh  build_elf_assets.sh  test_elf_debug  test_elf_i386  test_elf_long_rpath  test_elf_no_pie  test_elf_pie  test_elf_static_pie  test_elf_stripped  test_elf_with_needed  test_elf_with_old_rpath  test_elf_with_rpath  test_exe_adhoc  test_exe_fat  test_exe_hardened  test_exe_linker_signed  test_exe_unsigned
tests/python/: analyze_codesign.py  fuzz_patchelf.py  test_codesign.py  test_install_name_tool.py
